# wc_fir

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: ar_comparison.rs  auto_lasso.rs  ic_bic.rs  manual_mode.rs  model_comparison.rs  ols_basic.rs  screening.rs
src/: data.rs  defaults.rs  fir.rs  lasso.rs  lib.rs  ols.rs  select.rs  types.rs
